--- a/vacancyfromstep/templates/vacancyfromstep/NAVIGATION.html
+++ b/vacancyfromstep/templates/vacancyfromstep/NAVIGATION.html
@@ -12,7 +12,7 @@
 	</ul>
 	<ul class="navbar-nav col-2 justify-content-end">
 	  <li class="nav-item active">
-		<a href="admin" class="nav-link font-weight-bold">вход</a>
+		<a href="/admin" class="nav-link font-weight-bold">вход</a>
 	  </li>
 	</ul>
   </div>
