--- a/vacancyfromstep/templates/vacancyfromstep/company.html
+++ b/vacancyfromstep/templates/vacancyfromstep/company.html
@@ -36,7 +36,7 @@
                   <p class="text-muted pt-1">{{ vac.published_at }}</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
-                  <img src="{{ vac.specialty.picture }}" width="130" height="80" alt="">
+                  <a href="/vacancies/{{vac.pk}}"><img src="{{ vac.specialty.picture }}" width="130" height="80" alt=""></a>
                 </div>
               </div>
             </div>
