--- a/vacancyfromstep/templates/vacancyfromstep/vacancy.html
+++ b/vacancyfromstep/templates/vacancyfromstep/vacancy.html
@@ -21,13 +21,13 @@
       </div>
       <div class="col-12 col-lg-8">
         <section class="pl-3">
-          <a href="/vacancies/22"><img src="{{ vacanci_from_single.p }}" width="130" height="80" alt=""></a>
+          <a href="/vacancies/{{ single_vac }}"><img src="{{ vacanci_from_single.p }}" width="130" height="80" alt=""></a>
           <div class="d-flex align-items-baseline align-content-baseline">
             <h1 class="h2 mt-4 font-weight-bold" >{{ vacanci_from_single.title }}</h1>
             <p class="m-0 pl-3">{{ vacanci_from_single.salary_min }} – {{ vacanci_from_single.salary_max}} Р</p>
           </div>
           <p class="mt-2">{{ vacanci_from_single.skills }}</p>
-          <p class="text-muted mb-4">{{ vacanci_from_single.company.name}} ({{ vacanci_from_single.company.employee_count}} человек) , {{ vacanci_from_single.company.location}} или удаленно</p>
+          <p class="text-muted mb-4"><a href="/companies/{{ company_id.pk }}"> {{ vacanci_from_single.company.name}}</a> ({{ vacanci_from_single.company.employee_count}} человек) , {{ vacanci_from_single.company.location}} или удаленно</p>
           <div style="line-height: 1.8;">
           {{ vacanci_from_single.description }} 
           </div>
