--- a/vacancyfromstep/templates/registration/login.html
+++ b/vacancyfromstep/templates/registration/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+{% load crispy_forms_tags %}
 
 <head>
   <meta charset="UTF-8">
@@ -14,12 +15,9 @@
   </header>
   <main class="container mt-3">
     <section>
-	   {% if user.is_authenticated %}
-         <p>Hi {{ user.username }}!</p>
-         <p><a href="{% url 'logout' %}">Log out</a></p>
-       {% else %}
-      <form method="post" action="/{ % url 'aplogin' %}">{% csrf_token %}
-        <table>{{ form.as_table }}</table>
+      {% if not user.is_authenticated %}
+      <form method="post" action="{% url 'login' %}">{% csrf_token %}
+        <table>{{ form|crispy }}</table>
         <button type="submit">Login</button>
       </form>
 	  {% endif %}
