--- a/vacancyfromstep/templates/registration/signup.html
+++ b/vacancyfromstep/templates/registration/signup.html
@@ -12,10 +12,12 @@
   </header>
   <main class="container mt-3">
     <section>
+	  {% if not user.is_authenticated %}
       <form method="post" action="{% url 'signup' %}">{% csrf_token %}
          <table>{{ form.as_table }}</table>
          <button type="submit">Send</button>
        </form>
+	   {% endif %}
     </section>
   </main>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
